feat(cli): update CommandDispatcher to return success on usage help and enhance FileScrollRepository and SessionService for scroll management